[[bin]]
name = "kumandra"
path = "src/main.rs"


[package]
name = "kumandra"
version = "0.2.1"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"
readme = "README.md"

[dependencies]
kumandra-cli = { path = "./node/cli", features = [ "kumandra-native" ]  }
color-eyre = { version = "0.6.1", default-features = false }
parity-util-mem = { version = "0.12.0", default-features = false, features = ["jemalloc-global"] }



[workspace]
members = [
    "conjugate-poc",
    "pallets/proof-of-capacity",
    "pallets/proof-of-capacity-staking",
    "runtime",
    "node/*",
    
]

[features]
runtime-benchmarks= [ "kumandra-cli/runtime-benchmarks" ]
try-runtime = [ "kumandra-cli/try-runtime" ]
fast-runtime = [ "kumandra-cli/fast-runtime" ]


[profile.release]
panic = "unwind"
