[package]
name = "kumandra-cli"
description = "Kumandra Client Node"
version = "1.0.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.0.9", features = ["derive"], optional = true }
log = "0.4.17"
thiserror = "1.0.31"
futures = "0.3.21"

service = { package = "kumandra-service", path = "../service", default-features = false, optional = true }
kumandra-client = { path = "../client", optional = true }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", optional = true , branch = "polkadot-v0.9.34" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", optional = true , branch = "polkadot-v0.9.34" }
sc-cli = { git = "https://github.com/paritytech/substrate", optional = true , branch = "polkadot-v0.9.34" }
sc-service = { git = "https://github.com/paritytech/substrate", optional = true , branch = "polkadot-v0.9.34" }
sc-tracing = { git = "https://github.com/paritytech/substrate", optional = true , branch = "polkadot-v0.9.34" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

# this crate is used only to enable `trie-memory-tracker` feature
# see https://github.com/paritytech/substrate/pull/6745
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.34" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

[features]
default = ["db", "cli", "full-node", "trie-memory-tracker", "kumandra-native"]
db = ["service/db"]
cli = [
	"clap",
	"sc-cli",
	"sc-service",
	"sc-tracing",
	"frame-benchmarking-cli",
	"try-runtime-cli",
	"kumandra-client",
]
runtime-benchmarks = [
	"service/runtime-benchmarks",
]
trie-memory-tracker = ["sp-trie/memory-tracker"]
full-node = ["service/full-node"]
try-runtime = ["service/try-runtime", "try-runtime-cli/try-runtime"]
fast-runtime = ["service/fast-runtime"]

# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
kumandra-native = ["service/kumandra-native"]

