[package]
name = "kumandra-client"
version = "1.0.0"
authors = ["Kumandra"]
edition = "2021"

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-mmr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.34" }

sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-service = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.34" }

# Kumandra Runtimes
kumandra-runtime = { path = "../../runtime/", optional = true }

# kumandra-core-primitives = { path = "../../core-primitives" }
kumandra-primitives = { path = "../../primitives" }
# kumandra-runtime-common = { path = "../../runtime/common" }

[features]
default = ["kumandra"]
kumandra = ["kumandra-runtime"]
runtime-metrics = [
    "kumandra-runtime/runtime-metrics",
]