[package]
name = "kumandra-rpc"
version = "1.0.0"
authors = ["KOOMPI"]
description = "Kumanra node rpc methods."
edition = "2021"
repository = "https://github.com/kumandra/kumandra/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.15.1", features = ["server"] }

kumandra-primitives = { version = "1.0.0", path = "../../primitives" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" } 
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-rpc-spec-v2 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
